--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>anime Web</title>
   <link rel="stylesheet" href="./output.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="flex justify-center items-center h-screen bg-emerald-400">
     <div class="w-96 p-6 shadow-lg bg-white rounded-md">
-      <h1>Login</h1>
-      <hr>
+      <h1 class="text-3xl block text-center font-semibold"><i class="fa-solid fa-user"></i> Login</h1>
+      <hr class="mt-3">
+      <div class="mt-3">
+        <label for="username" class="block text-base mb-2">Username</label>
+        <input type="text" id="username" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="enter your name ... ">
+      </div>
+      <div class="mt-3"></div>
+        <label for="password" class="block text-base mb-2">Password</label>
+        <input type="text" id="Password" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="enter your password ... ">
+      <div class="mt-5"></div>
+      <button type="summit" class="borde-2 border-emerald-400 bg-emerald-400 text-white py-1 px-5">Summit</button>
     </div>
+    </div>
+  
   </div>
 </body>
 </html>
